# AKCIT_Openvas_Agent

./: .env.example  .gitignore  README.md  SETUP_OPENVAS.md  pyproject.toml  requirements.txt  test_full_simulation.py  test_mock_openvas.py
src/akcit_openvas_agent/: crew.py  main.py
src/akcit_openvas_agent/config/: agents.yaml  tasks.yaml
src/akcit_openvas_agent/tools/: gvm_results.py  gvm_workflow.py
